<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.contactsselect.ContactsSelectFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessageContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_contact" />

</LinearLayout>
